tests/baselines/reference/ES3For-ofTypeCheck6.errors.txt
error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
ES3For-ofTypeCheck6.ts(2,15): error TS2454: Variable 'union' is used before being assigned.


!!! error TS5107: Option 'target=ES3' is deprecated and will stop functioning in TypeScript 5.5. Specify compilerOption '"ignoreDeprecations": "5.0"' to silence this error.
==== ES3For-ofTypeCheck6.ts (1 errors) ====
    var union: string[] | number[];
    for (var v of union) { }
                  ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.